test/TestSuite/Scheduler/Errors/no_tasks.tjp
project test "Test" "1.0" 2007-03-28 +2m

resource r "R"

# MARK: error 0 no_tasks

